# MLOps-ds-fundamental

./: .gitignore  README.md
docs/: development-wbs.md  mlops-course-outline.md  (+3 more)
mlops-course/: .gitignore  Makefile  README.md  SETUP.md  pyproject.toml
mlops-course/capstone/: README.md
mlops-course/capstone/smart-factory-mlops/: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml
mlops-course/capstone/smart-factory-mlops/.github/workflows/: ci.yml  deploy.yml  train.yml
mlops-course/capstone/smart-factory-mlops/conf/: config.yaml
mlops-course/capstone/smart-factory-mlops/conf/data/: demand.yaml  images.yaml  sensors.yaml
mlops-course/capstone/smart-factory-mlops/conf/hpo/: lstm.yaml  resnet.yaml  xgboost.yaml
mlops-course/capstone/smart-factory-mlops/conf/model/: lstm.yaml  resnet.yaml  xgboost.yaml
mlops-course/capstone/smart-factory-mlops/conf/train/: default.yaml
mlops-course/capstone/smart-factory-mlops/data/: README.md
mlops-course/capstone/smart-factory-mlops/docker/: Dockerfile.serve  Dockerfile.train  docker-compose.yml  requirements-train.txt
mlops-course/capstone/smart-factory-mlops/feature_repo/: data_sources.py  entities.py  feature_store.yaml  features.py
mlops-course/capstone/smart-factory-mlops/governance/: ai_act_risk_assessment.md
mlops-course/capstone/smart-factory-mlops/governance/datasheets/: sensors_datasheet.md
mlops-course/capstone/smart-factory-mlops/governance/model_cards/: tabular_model_card.md  vision_model_card.md
mlops-course/capstone/smart-factory-mlops/infra/terraform/: README.md  main.tf  outputs.tf  variables.tf
mlops-course/capstone/smart-factory-mlops/monitoring/evidently/: README.md  drift_config.yaml
mlops-course/capstone/smart-factory-mlops/monitoring/grafana/: README.md  prometheus.yml  prometheus_rules.yml
mlops-course/capstone/smart-factory-mlops/notebooks/: 01_eda_sensor.ipynb  02_eda_defect_images.ipynb  03_pointintime_leakage_demo.ipynb
mlops-course/capstone/smart-factory-mlops/pipelines/: __init__.py  _helpers.py  deployment_pipeline.py  feature_pipeline.py  training_pipeline.py
mlops-course/capstone/smart-factory-mlops/services/: bentofile.yaml  requirements-serve.txt  runners.py  service.py
mlops-course/capstone/smart-factory-mlops/src/: __init__.py
mlops-course/capstone/smart-factory-mlops/src/data/: __init__.py  loaders.py  prepare.py  validation.py
mlops-course/capstone/smart-factory-mlops/src/features/: __init__.py  build_features.py  feast_io.py  materialize_offline.py
mlops-course/capstone/smart-factory-mlops/src/models/: __init__.py
mlops-course/capstone/smart-factory-mlops/src/monitoring/: __init__.py  drift.py  metrics.py
mlops-course/capstone/smart-factory-mlops/src/serving/: __init__.py  model_loader.py  predict.py  schemas.py
mlops-course/capstone/smart-factory-mlops/src/training/: __init__.py  _trainers.py  evaluate.py  train.py
mlops-course/capstone/smart-factory-mlops/src/tuning/: __init__.py  optuna_tuning.py
mlops-course/capstone/smart-factory-mlops/src/utils/: __init__.py  config.py  logging.py  seed.py
mlops-course/capstone/smart-factory-mlops/tests/: __init__.py  conftest.py
mlops-course/capstone/smart-factory-mlops/tests/data/: __init__.py  test_expectations.py
mlops-course/capstone/smart-factory-mlops/tests/integration/: __init__.py  test_training_pipeline.py
mlops-course/capstone/smart-factory-mlops/tests/unit/: __init__.py  test_features.py  test_metrics.py
mlops-course/checkpoints/: README.md
mlops-course/checkpoints/after-m1/: README.md
mlops-course/checkpoints/after-m2/: README.md
mlops-course/checkpoints/after-m3/: README.md
mlops-course/checkpoints/after-m4/: README.md
mlops-course/checkpoints/after-m5/: README.md
mlops-course/datasets/: README.md  iris.csv  make_datasets.py  toy_sensors.csv
mlops-course/modules/m1-foundations/: README.md
mlops-course/modules/m1-foundations/sandbox/: 01_baseline_iris.py  README.md
mlops-course/modules/m2-tracking-tuning-versioning/: README.md
mlops-course/modules/m2-tracking-tuning-versioning/sandbox/dvc/: 01_version_a_csv.md
mlops-course/modules/m2-tracking-tuning-versioning/sandbox/mlflow/: 01_first_run.py  02_params_metrics.py  03_log_model.py
mlops-course/modules/m2-tracking-tuning-versioning/sandbox/optuna/: 01_objective_basic.py  02_mlflow_callback.py  03_pruning_asha.py
mlops-course/modules/m3-feature-store/: README.md
mlops-course/modules/m3-feature-store/sandbox/: .gitignore  00_prepare_data.py  01_point_in_time_demo.py  requirements.txt
mlops-course/modules/m3-feature-store/sandbox/feature_repo/: feature_definition.py  feature_store.yaml
mlops-course/modules/m4-serving/: README.md
mlops-course/modules/m4-serving/sandbox/01_fastapi/: README.md  app.py  requirements.txt
mlops-course/modules/m5-automation/: README.md
mlops-course/modules/m6-monitoring-governance/: README.md
mlops-course/workspace/: README.md
(+1931 files in other folders)
