[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops-course"
version = "0.1.0"
description = "MLOps 入門教學 repo：一次一工具、玩具資料先行、漸進整合的學習路徑（m1–m6）"
readme = "README.md"
requires-python = "==3.11.*"
license = { text = "MIT" }
authors = [{ name = "MLOps Course" }]
keywords = ["mlops", "teaching", "mlflow", "feast", "bentoml", "prefect"]

# ──────────────────────────────────────────────────────────────
# 全課依賴：一次裝好，避免每模組重裝的摩擦。
# 版本下限刻意保守，確保各工具在 Python 3.11 + CPU 環境相容。
# ──────────────────────────────────────────────────────────────
dependencies = [
    # 核心資料 / 建模
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "numpy>=1.24",
    "xgboost>=2.0",

    # m2：追蹤・調參・版本化
    "mlflow>=2.10",
    "optuna>=3.5",
    "dvc>=3.0",

    # m3：特徵商店
    "feast>=0.36",

    # m4：服務化
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "bentoml>=1.2",
    "torch>=2.2",
    "torchvision>=0.17",
    "onnxruntime>=1.17",

    # m5：自動化
    "prefect>=2.16",

    # m6：監控・治理
    "evidently>=0.4",
    "great-expectations>=0.18",
]

[project.optional-dependencies]
# 進階 HPO：分散式調參與 AutoML 框架（階 2 延後內容，需要時再裝）。
# 安裝：pip install -e ".[advanced]"
advanced = [
    "ray[tune]>=2.9",
    "flaml>=2.1",
]

[project.urls]
Homepage = "https://github.com/Zenobia000/MLOps_fundamentals"

# 教學 repo 採「多個孤立 sandbox 範例」組織，非可 import 的套件。
# 不打包任何 package，僅用 pyproject 當統一依賴來源。
[tool.setuptools]
packages = []
